Use clang toolchain by default Include both clang and gcc in CI debug builds, but only use clang for release builds. Clang seems to provide stricter compile warnings and slightly smaller library/binary output sizes.

--- a/.azure.yml
+++ b/.azure.yml
@@ -12,21 +12,37 @@ jobs:
   - template: build/ci/linux.yml
     parameters:
       configuration: 'Debug'
+      toolchain: 'clang'
       arch: 'x86'
 
   - template: build/ci/linux.yml
     parameters:
       configuration: 'Debug'
+      toolchain: 'clang'
+      arch: 'x64'
+
+  - template: build/ci/linux.yml
+    parameters:
+      configuration: 'Debug'
+      toolchain: 'gcc'
+      arch: 'x86'
+
+  - template: build/ci/linux.yml
+    parameters:
+      configuration: 'Debug'
+      toolchain: 'gcc'
       arch: 'x64'
 
   - template: build/ci/linux.yml
     parameters:
       configuration: 'Release'
+      toolchain: 'clang'
       arch: 'x86'
 
   - template: build/ci/linux.yml
     parameters:
       configuration: 'Release'
+      toolchain: 'clang'
       arch: 'x64'
 
   #### Windows ####
