--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test/googletest"]
-	path = test/googletest
+[submodule "test/googletest/src"]
+	path = test/googletest/src
 	url = https://github.com/google/googletest.git
