Extend Windows CI to compile in debug mode
Tests still run in release mode because debug mode tests on Windows are
annoyingly slow. But CI should at least ensure debug mode can compile.

--- a/.azure.yml
+++ b/.azure.yml
@@ -9,6 +9,7 @@ trigger:
 
 jobs:
   #### Linux ####
+
   - template: build/ci/linux.yml
     parameters:
       configuration: 'Debug'
@@ -46,10 +47,23 @@ jobs:
       arch: 'x64'
 
   #### Windows ####
+
   - template: build/ci/windows.yml
     parameters:
+      configuration: 'Debug'
       arch: 'x86'
 
   - template: build/ci/windows.yml
     parameters:
+      configuration: 'Debug'
+      arch: 'x64'
+
+  - template: build/ci/windows.yml
+    parameters:
+      configuration: 'Release'
+      arch: 'x86'
+
+  - template: build/ci/windows.yml
+    parameters:
+      configuration: 'Release'
       arch: 'x64'
