Integrate with flymake build system
The Makefile system used by libfly has moved to its own repository,
here: https://github.com/trflynn89/flymake

Remove the Makefile system from libfly in favor of flymake.

--- a/.azure.yml
+++ b/.azure.yml
@@ -13,25 +13,25 @@ jobs:
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'clang'
-      mode: 'Debug'
+      mode: 'debug'
       arch: 'x86'
 
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'clang'
-      mode: 'Debug'
+      mode: 'debug'
       arch: 'x64'
 
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'clang'
-      mode: 'Release'
+      mode: 'release'
       arch: 'x86'
 
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'clang'
-      mode: 'Release'
+      mode: 'release'
       arch: 'x64'
 
   #### Linux GCC ####
@@ -39,36 +39,36 @@ jobs:
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'gcc'
-      mode: 'Debug'
+      mode: 'debug'
       arch: 'x86'
 
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'gcc'
-      mode: 'Debug'
+      mode: 'debug'
       arch: 'x64'
 
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'gcc'
-      mode: 'Release'
+      mode: 'release'
       arch: 'x86'
 
   - template: build/ci/linux.yml
     parameters:
       toolchain: 'gcc'
-      mode: 'Release'
+      mode: 'release'
       arch: 'x64'
 
   #### macOS ####
 
   - template: build/ci/macos.yml
     parameters:
-      mode: 'Debug'
+      mode: 'debug'
 
   - template: build/ci/macos.yml
     parameters:
-      mode: 'Release'
+      mode: 'release'
 
   #### Windows ####
 
