--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "bench/string/extern/fmt"]
-	path = bench/string/extern/fmt
-	url = https://github.com/fmtlib/fmt.git
 [submodule "extern/boostorg/json"]
 	path = extern/boostorg/json
 	url = https://github.com/boostorg/json.git
 [submodule "extern/catchorg/Catch2"]
 	path = extern/catchorg/Catch2
 	url = https://github.com/catchorg/Catch2.git
+[submodule "extern/fmtlib/fmt"]
+	path = extern/fmtlib/fmt
+	url = https://github.com/fmtlib/fmt.git
 [submodule "extern/nlohmann/json"]
 	path = extern/nlohmann/json
 	url = https://github.com/nlohmann/json.git
