--- a/.azure.yml
+++ b/.azure.yml
@@ -42,6 +42,7 @@ stages:
           toolchain: 'clang'
           mode: 'debug'
           arch: 'x86'
+          sanitize: 'address' # UndefinedBehaviorSanitizer fails to link on x86 clang.
 
       - template: build/ci/linux.yml
         parameters:
@@ -49,6 +50,7 @@ stages:
           mode: 'debug'
           arch: 'x64'
           coverage: '1'
+          sanitize: 'address,undefined'
 
       - template: build/ci/linux.yml
         parameters:
@@ -67,12 +69,14 @@ stages:
           toolchain: 'gcc'
           mode: 'debug'
           arch: 'x86'
+          sanitize: 'address,undefined'
 
       - template: build/ci/linux.yml
         parameters:
           toolchain: 'gcc'
           mode: 'debug'
           arch: 'x64'
+          sanitize: 'address,undefined'
 
       - template: build/ci/linux.yml
         parameters:
@@ -94,6 +98,7 @@ stages:
       - template: build/ci/macos.yml
         parameters:
           mode: 'debug'
+          sanitize: 'address,undefined'
 
       - template: build/ci/macos.yml
         parameters:
